--- a/style.css
+++ b/style.css
@@ -77,7 +77,10 @@ header {
     flex-direction: column;
     text-align: center;
     padding: 0 1rem;
+    border-radius: 8px;
 }
+
+.navbar.hidden {display: none; transition: 1200ms;}
 
 .navbar ul {
     padding: 2rem;
