--- a/style.css
+++ b/style.css
@@ -50,6 +50,11 @@ picture {
 a {text-decoration: none}
 ul, ol {list-style: none; margin: 0;}
 
+input,
+button {
+    font: inherit;
+}
+
 body {
     font-size: 1.125rem;
     margin-top: 2rem;
@@ -171,3 +176,42 @@ header {
 }
 
 /** HEADER END*/
+
+/** HERO */
+
+.hero {
+    margin-top: 25px;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    align-items: center;
+}
+
+.title {
+    font-size: 2.5rem;
+    color: var(--Very-Dark-Blue);
+    font-weight: var(--fw-bold);
+}
+
+.hero-image {
+    order: -1;
+}
+
+.hero-content {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    align-items: center;
+    color: var(--Grayish-Violet);
+}
+
+.get-started-button {
+    border: none;
+    color: white;
+    /* font-size: 1.125rem; */
+    font-weight: var(--fw-bold);
+    background-color: var(--Cyan);
+    padding: .8rem 2rem;
+    border-radius: 2rem;
+}
