--- a/style.css
+++ b/style.css
@@ -86,7 +86,7 @@ header {
     border-radius: 8px;
 }
 
-@media (max-width: 739px){
+@media (max-width: 849px){
     .navbar.hidden {display: none; transition: 1200ms;}
 }
 
@@ -137,7 +137,7 @@ header {
 
 /* NAV BAR DESKTOP */
 
-@media (min-width: 740px) {
+@media (min-width: 850px) {
     header { 
         display: flex;
         align-items: center;
@@ -214,4 +214,42 @@ header {
     background-color: var(--Cyan);
     padding: .8rem 2rem;
     border-radius: 2rem;
+}
+
+@media (min-width: 680px) {
+    .inline-flow {
+        padding: 0 4rem;
+    }
+
+    .hero {
+        margin-top: 80px;
+    }
+
+    .title {
+        font-size: 4.5rem;
+        color: var(--Very-Dark-Blue);
+        font-weight: var(--fw-bold);
+    }
+
+    .hero-content {
+        text-align: left;
+        align-items: flex-start;
+        font-size: 1.3rem;
+    }
+
+    .hero-image {
+        max-width: 550px;
+    }
+
+}
+
+@media (min-width: 1070px) {
+    .hero {
+        flex-direction: row;
+        gap: 2.5rem;
+    }
+
+    .hero-image {
+        order: unset
+    }
 }
