--- a/style.css
+++ b/style.css
@@ -135,10 +135,15 @@ header {
     opacity: .8;
 }
 
+.primary-button:hover {
+    cursor: pointer;
+    opacity: .8;
+}
+
 /* NAV BAR DESKTOP */
 
 @media (min-width: 850px) {
-    header { 
+    header {
         display: flex;
         align-items: center;
         gap: 3rem;
@@ -186,6 +191,7 @@ header {
     flex-direction: column;
     gap: 1rem;
     align-items: center;
+    margin-bottom: 140px;
 }
 
 .title {
@@ -251,5 +257,189 @@ header {
 
     .hero-image {
         order: unset
+    }
+}
+
+/** MAIN SECTION */
+
+/* Short link input */
+
+main {
+    margin-top: 80px;
+    background-color:hsl(0deg 0% 94.49%);
+}
+
+.short-link-form {
+    background-image: url('./images/bg-blue.jpeg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding: 1rem ;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    border-radius: 8px;
+    position: relative;
+    top: -50px;
+}
+
+.short-link-input,
+.short-link-form button {
+    border: none;
+    padding: 1rem;
+    border-radius: 8px;
+}
+
+.short-link-form button {
+    background-color: var(--Cyan);
+    color: white;
+    font-weight: var(--fw-bold);
+}
+
+/* Advance statistics */
+
+.advance-statistics {
+    margin: auto;
+    text-align: center;
+    max-width: 550px;
+}
+
+
+.advance-statistics h3 {
+    color: var(--Very-Dark-Violet);
+    font-weight: var(--fw-bold);
+    font-size: 2rem;
+    margin-bottom: 1rem;
+}
+
+.advance-statistics p {
+    color: var(--Very-Dark-Blue);
+}
+
+.advance-statistics-cards {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 5rem;
+    color: var(--Very-Dark-Blue);
+    margin-block: 80px;
+}
+
+@media(min-width: 1070px) {
+    .advance-statistics-cards {
+        flex-direction: row;
+        align-items: stretchS;
+    }
+}
+
+.advance-statistics-card {
+    position: relative;
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    max-width: 450px;
+    border-radius: 4px;
+    padding-bottom: 2rem;
+    padding-inline: 1rem;
+    gap: 1rem;
+}
+
+.card-icon {
+    position: relative;
+    top: -30px;
+    background-color: var(--Dark-Violet);
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 80px;
+    aspect-ratio: 1;
+}
+
+@media(min-width: 680px) {
+    .short-link-form {
+        flex-direction: row;
+        max-width: 680px;
+        margin: auto;
+    }
+
+    .short-link-input {
+        flex-grow: 1;
+    }
+}
+
+/* GET STARTED SECTION */
+
+.get-started-section {
+    text-align: center;
+    padding: 5rem 0;
+    background-image: url('./images/bg-blue.jpeg');
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.get-started-section h3 {
+    color: white;
+    font-weight: var(--fw-bold);
+    font-size: 2rem;
+    margin-bottom: 2rem;
+}
+
+/** FOOTER */
+
+footer {
+    background-color: var(--Very-Dark-Violet);
+    text-align: center;
+    padding-block: 2rem;
+}
+
+.footer-logo {
+    color: white;
+    font-size: 2rem;
+    margin-bottom: 3rem;
+}
+
+.footer-info {
+    margin-bottom: 2rem;
+    color: white;
+}
+
+.footer-info h3{
+    font-size: 1.4rem;
+    font-weight: var(--fw-bold);
+    margin-bottom: 1rem;
+}
+
+.footer-info p {
+    padding: 5px;
+}
+
+.footer-info p:hover {
+    color: var(--Cyan);
+    cursor: pointer;
+}
+
+.contact {
+    display: flex;
+    justify-content: center;
+    gap: 2rem;
+}
+
+.contact img:hover {
+    background-color: var(--Cyan);
+    border-radius: 8px;
+    cursor: pointer;
+}
+
+@media(min-width: 1070px) {
+    footer .container {
+        display: flex;
+        align-items: start;
+        gap: 3.5rem
+    }
+
+    .footer-logo {
+        margin-right: 5rem;
     }
 }
